Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1286

OOPs in lprocfs_remove_nolock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0
    • Lustre 2.3.0
    • None
    • 3
    • 4592

      general protection fault: 0000 [1] SMP
      last sysfs file: /devices/pci0000:00/0000:00:00.0/irq
      CPU 0
      Modules linked in: llite_lloop(U) lustre(U) osd_ldiskfs(U) fsfilt_ldiskfs(U) ldiskfs(U) osp(U) lod(U) obdfilter(U) ost(U) cmm(U) mdt(U) mdd(U) mgs(U) jbd2(U) crc16(U) mgc(U) lov(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) ptlrpc(U) obdclass(U) lvfs(U) ksocklnd(U) lnet(U) libcfs(U) nfsd(U) exportfs(U) auth_rpcgss(U) ipv6(U) xfrm_nalgo(U) crypto_api(U) autofs4(U) hidp(U) nfs(U) fscache(U) nfs_acl(U) rfcomm(U) l2cap(U) bluetooth(U) lockd(U) sunrpc(U) loop(U) dm_multipath(U) scsi_dh(U) video(U) backlight(U) sbs(U) power_meter(U) hwmon(U) i2c_ec(U) dell_wmi(U) wmi(U) button(U) battery(U) asus_acpi(U) acpi_memhotplug(U) ac(U) parport_pc(U) lp(U) parport(U) floppy(U) snd_intel8x0(U) snd_ac97_codec(U) ac97_bus(U) snd_seq_dummy(U) snd_seq_oss(U) snd_seq_midi_event(U) snd_seq(U) snd_seq_device(U) snd_pcm_oss(U) snd_mixer_oss(U) snd_pcm(U) snd_timer(U) snd(U) soundcore(U) pcspkr(U) i2c_piix4(U) snd_page_alloc(U) i2c_core(U) serio_raw(U) tpm_tis(U) tpm(U) tpm_bios(U) ide_cd(U) virtio_balloon(U) cdrom(U) virtio_net(U) dm_raid45(U) dm_message(U) dm_region_hash(U) dm_mem_cache(U) dm_snapshot(U) dm_zero(U) dm_mirror(U) dm_log(U) dm_mod(U) ata_piix(U) libata(U) sd_mod(U) scsi_mod(U) virtio_blk(U) virtio_pci(U) virtio_ring(U) virtio(U) ext3(U) jbd(U) uhci_hcd(U) ohci_hcd(U) ehci_hcd(U)
      Pid: 3243, comm: obd_zombid Tainted: G 2.6.18-prep #0
      RIP: 0010:[<ffffffff8879cb43>] [<ffffffff8879cb43>] :obdclass:lprocfs_remove_nolock+0x53/0x100
      RSP: 0018:ffff810066235d90 EFLAGS: 00010202
      RAX: ffff81003effc188 RBX: ffff810016232b60 RCX: 0000000000000000
      RDX: 0000000000000000 RSI: ffff810068fef7f0 RDI: ffff81003effc260
      RBP: ffff810066235db0 R08: ffff810066234000 R09: 000000000000003e
      R10: ffff81007ff40038 R11: 0000000000000000 R12: 6b6b6b6b6b6b6b6b
      R13: 6b6b6b6b6b6b6b6b R14: 6b6b6b6b6b6b6b6b R15: ffff81003488c800
      FS: 00002ab6f9a096e0(0000) GS:ffffffff8044b000(0000) knlGS:0000000000000000
      CS: 0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      CR2: 000000001838f758 CR3: 000000006f0f8000 CR4: 00000000000006e0
      Process obd_zombid (pid: 3243, threadinfo ffff810066234000, task ffff810068fef7f0)
      Stack: ffff81003effc260 ffff81003effc188 ffff81003488c650 ffff81003488c080
      ffff810066235dd0 ffffffff8879cd10 ffff810066235dd0 ffff81003effc188
      ffff810066235e00 ffffffff88affb60 ffff81003488c800 ffff81003effc188
      Call Trace:
      [<ffffffff8879cd10>] :obdclass:lprocfs_remove+0x20/0x40
      [<ffffffff88affb60>] :lov:lov_pool_del+0x100/0x1b0
      [<ffffffff88adfa8c>] :lov:lov_cleanup+0xac/0x3d0
      [<ffffffff887a50be>] :obdclass:class_decref+0x31e/0x3e0
      [<ffffffff8878e4d0>] :obdclass:obd_zombie_impexp_thread+0x0/0x1c0
      [<ffffffff8878a976>] :obdclass:obd_zombie_impexp_cull+0x326/0x3f0
      [<ffffffff8878e62a>] :obdclass:obd_zombie_impexp_thread+0x15a/0x1c0
      [<ffffffff80094d61>] default_wake_function+0x0/0xf
      [<ffffffff80062fb1>] child_rip+0xa/0x11
      [<ffffffff8878e4d0>] :obdclass:obd_zombie_impexp_thread+0x0/0x1c0
      [<ffffffff8878e4d0>] :obdclass:obd_zombie_impexp_thread+0x0/0x1c0
      [<ffffffff80062fa7>] child_rip+0x0/0x11

      I got this when I test my patch. And It turns out during lov cleanup,

      it first tries to remove all entries under /proc/lustre-clilov-xxx/ in lov_precleanup->lprocfs_obd_cleanup, but did not reset those entry to NULL, then later in lov_cleanup->lov_pool_del, it tries to remove those /proc/lustre-clilov-xxxx/pools/ again.

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: