LU-1286 obdclass: oops in lprocfs_remove_nolock

It should check whether proc entry for the LOV has been
removed before trying to remove /proc entry for the pool,
which is attached under proc entry of the lov, otherwise,
it will cause OOPs.

Signed-off-by: Di Wang <di.wang@whamcloud.com>
Change-Id: I1d1b03d02348caaa1e421aa1de1535c8cf0ba3f4